# the_game

./: CMakeLists.txt  bck.txt
files/: map.txt
player1/: player1.cpp  player1.h
src/: CMakeLists.txt  heroes.cpp  heroes.h  main  main.cpp  maintenance.cpp  maintenance.h
